<resources>
    <!-- General strings -->
    <string name="app_name">eClaim-PAIC</string>
    <string name="button_start">Start</string>
    <string name="button_continue">Continue</string>
    <string name="button_toast_not_supported">Not supported yet!</string>
    <string name="take_picture_text">Take</string>
    <string name="not_enough_pics">Please capture all required pictures!</string>
    <string name="not_making_a_selection">Please make a selection!</string>

    <!-- Activity specific strings -->
    <string name="welcome_title">@string/app_name</string>
    <string name="welcome_detail">Compensate &amp; Handle \n \t\t Easy &amp; Fast</string>

    <string name="steps_title">Steps</string>
    <string name="steps_details">We will guide you for the rest of the process\n\n1. Take a picture\n2. Make an agreement\n3. File the claim</string>

    <string name="tips_title">Tips</string>
    <string name="tips_details">Please turn “Location” on for the convenience of the police.
        \n\nFor your safety, please turn “Emergency Light” on. If at night, also turn “Outline Marker Lamps” and “Back Light” on at night.
        \n\nRemember to put a “Triangle Warning Sign” at the back of the car as well.</string>

    <string name="take_picture_title">Take picture and move the car</string>
    <string name="take_picture_i_details">Please select collision type:</string>

    <string name="button_take_picture_i_single_car">Single Car</string>
    <string name="button_take_picture_i_double_cars">Double Cars</string>
    <string name="button_take_picture_i_multiple_cars">Multiple Cars</string>

    <string name="take_picture_ii_details">Please take pictures of specific places:</string>
    <string name="take_picture_ii_front_side_view">Front-side View</string>
    <string name="take_picture_ii_collision_your_car">Collision - Your car</string>
    <string name="take_picture_ii_collision_opponents_car">Collision - Opponent\'s car</string>
    <string name="take_picture_ii_license_plate_your_car">License plate - Your car</string>
    <string name="take_picture_ii_license_plate_opponents_car">License plate - Opponent\'s car</string>
    <string name="take_picture_ii_additional">Additional photo (Optional)</string>

    <string name="take_picture_iii_details">Please move the car to the safe area in order to avoid traffic jam</string>

    <string name="information_title">Information</string>
    <string name="information_highway_quest">Does the accident happen on highway?</string>
    <string-array name="highway_options">
        <item>Yes</item>
        <item>No</item>
        <item>Not Sure</item>
    </string-array>
    <string name="information_subtitle_your_information">Your Information</string>
    <string name="information_button_driver_license">Driver License</string>
    <string name="information_button_insurance_card">Insurance Card</string>
    <string name="information_textview_name">Name*</string>
    <string name="information_textview_plate_number">Plate Number*</string>
    <string name="information_textview_plate_color">Plate Color</string>
    <string-array name="plate_colors">
        <item>Black</item>
        <item>Gold</item>
        <item>Green</item>
        <item>Grey</item>
        <item>Mixed</item>
        <item>Orange</item>
        <item>Red</item>
        <item>White</item>
    </string-array>
    <string name="information_textview_car_type">Car Type</string>
    <string-array name="car_types">
        <item>Convertible</item>
        <item>Coupe</item>
        <item>Crossover</item>
        <item>Hatckback</item>
        <item>Sedan</item>
        <item>SUV</item>
        <item>Truck</item>
        <item>Van</item>
    </string-array>
    <string name="information_textview_insurance_company">Insurance*</string>
    <string name="information_textview_phone_number">Phone Number*</string>
    <string name="information_subtitle_opponent_information">Opponent\'s Information</string>

    <string name="make_agreement_title">Make an Agreement</string>
    <string name="make_agreement_accident_type">Type of Accident</string>
    <string-array name="accident_types">
        <item>Hit from back</item>
        <item>Change lane</item>
        <item>Fail to stop or yield</item>
        <item>Others</item>
    </string-array>
    <string name="make_agreement_subtitle_your_information">Your Information</string>
    <string name="make_agreement_textview_name">Name</string>
    <string name="make_agreement_textview_plate_number">Plate Number</string>
    <string name="make_agreement_textview_insurance_company">Insurance</string>
    <string name="make_agreement_textview_phone_number">Phone Number</string>
    <string name="make_agreement_textview_responsibility">Responsibility</string>
    <string-array name="responsibility_types">
        <item>Full</item>
        <item>Partial</item>
        <item>None</item>
    </string-array>
    <string name="make_agreement_subtitle_opponent_information">Opponent Information</string>
    <string name="make_agreement_button_agree">Agree</string>
    <string name="make_agreement_button_disagree">Disagree</string>

    <string name="agreement_screenshot_suggestion">We suggest you to take screenshots of this page for future reference. For Android device, hold "Home" (or "Volumn Down") and "Power" buttons at the same time.</string>
    <string name="agreement_agreement_title">Agreement</string>
    <string name="agreement_agreement_time">Time</string>
    <string name="agreement_agreement_time_result">Apr. 4, 2017 17:20:00</string>
    <string name="agreement_agreement_location">Location</string>
    <string name="agreement_agreement_location_result">Los Angeles, CA, USA</string>
    <string name="agreement_agreement_accident_type">Accident Type</string>
    <string name="agreement_agreement_accident_type_result">N/A</string>
    <string name="agreement_person_a_title">Person A</string>
    <string name="agreement_person_name">Name</string>
    <string name="agreement_person_name_result">Name</string>
    <string name="agreement_person_plate">Plate</string>
    <string name="agreement_person_plate_result">Plate</string>
    <string name="agreement_person_insurance">Insurance</string>
    <string name="agreement_person_insurance_result">Insurance</string>
    <string name="agreement_person_phone">Phone</string>
    <string name="agreement_person_phone_result">Phone</string>
    <string name="agreement_person_b_title">Person B</string>
    <string name="agreement_section_iv_title">Responsibility</string>
    <string name="agreement_responsibility_person_a">Person A</string>
    <string name="agreement_responsibility_person_a_result">Person A Responsibility</string>
    <string name="agreement_responsibility_person_b">Person B</string>
    <string name="agreement_responsibility_person_b_result">Person B Responsibility</string>

    <string name="judgement_title">Judgement</string>
    <string name="judgement_sending_details">This case had been transferred to PingAn insurance. The results will come soon. Once came out, the Continue button will shown</string>
    <string name="judgement_sending_introduction_hidden">Note: This (and below) content will not appear in the formal app. We show it here simply to imply what information will be transferred to server. These information includes: \nHighway? Accident type; \nName, Plate number, Plate color, Car type, Insurance company and Phone number from you and opponent. \nAll photos (in the order of: front side view, collision - your car, collision - opponent car, license plate - your car, license plate - opponent car, additional photo (if exist), driver license - you (if exist), driver license - your opponent), insurance card - you (if exist), insurance card - opponent (if exist) will be included as well\nIf you see an Android icon in a corresponding position, that means image at this order is not available\n</string>
    <string name="judgement_sending_button_back">Back</string>
    <string name="judgement_sending_button_continue">Continue</string>

    <string name="file_claim_title">File the Claim</string>
    <string name="file_claim_details">Now you can file the claim</string>
    <string name="file_claim_subtitle_person_a">Person A</string>
    <string name="file_claim_textview_name">Name</string>
    <string name="file_claim_responsibility_name">Responsibility</string>
    <string name="file_claim_insurance_company_name">Insurance</string>
    <string name="file_claim_note">Note: If you are not responsible, please get approval from the person with full responsibility.</string>
    <string name="file_claim_button_file">File</string>
    <string name="file_claim_button_cancel">Cancel</string>
    <string name="transfer_to_server">Transferring to server</string>

    <string name="file_success_title">Filed Successfully</string>
    <string name="file_success_details">The insurance company will contact you soon.</string>
    <string name="file_success_button_finish">Finish</string>
    <string name="file_success_person_a">Person A</string>
    <string name="file_success_textview">Name</string>
    <string name="file_success_insurance">Insurance</string>
    <string name="file_success_time">Time</string>

    <string name="file_canceled_title">File Canceled</string>
    <string name="file_canceled_details">You decided not to file at this time. All the images are saved and can be found at "/Pictures/eClaim-PAIC/" folder. Please save (take a note or screenshot) all the opponent information in this page for future reference. These will be discarded once you click Finish button.</string>
    <string name="file_canceled_opponent_information_title">Opponent Information</string>
    <string name="file_canceled_textview_name">Name</string>
    <string name="file_canceled_textview_license_plate">Plate</string>
    <string name="file_canceled_textview_insurance">Insurance</string>
    <string name="file_canceled_textview_phone_number">Phone</string>
    <string name="file_canceled_button_finish">Finish</string>
</resources>
